*Empty MediaWiki Message*

--- a/Ask_en_Embla.mw
+++ b/Ask_en_Embla.mw
@@ -1,12 +1,12 @@
-In de [[Noordse mythologie]] warren Ask en Embla de eerste meansen, deur [[Odin]], [[Vili]] en [[Vé]] uut 't hoalt eskaopen dat zi'j op 't weerldstraand vunnen, naodat de skepping war begunnen. Ask en Embla wörn enuumd in de [[Völuspá]].
+In de [[Noordse mythologie|noordske mytology]] waren '''Ask en Embla''' de eyrste mensken, döär [[Odin]], [[Vili]] en [[Vé]] üüt een stük holt esköäpen dat sy up et wearldstrand vünden, nådat de skepping begünnen was. Ask en Embla wördden enömed in de [[Völuspá]].
 
-'t Bint eaglik twee symboliese namen veur bomen of greuimenieren (Ask betekkent Es en Embla betekkent Iep of Slingerplant). In de Noordse skrieveri'je is 't wel vake de gewoonte meansen met bomen te vergelieken, veural in de Edda.
+Et bint eigenlik twey symboliske namen vöär boumen of gröiwysen (Ask beteakent Es en Embla beteakent Iep of Slingerplant). In de oldnoordske skryverye is et wal vake de gewöänte ümme mensken med boumen te vergelyken, vöäral in de Edda.
 
-'t Weurdtie [[boom]] beduudt tegelieke stewigheid (vgl. " 'n boom van 'n keerl"), leemskracht (vgl. "stark as 'n boom") en vruchtbaarheid ("met 'n stamboom"). Ask en Embla bint dus twee belangrieke leemsbegunnen.
+Et wöärdtyn [[boom|boum]] bedüüdt tegelyke steyvigheid (vgl. " nen boum van nen kearl"), leavenskracht (vgl. "stark as nen boum") en vrüchtbaarheid ("med nen stamboum"). Ask en Embla bint düs twey belangryke leavensbegünnen.
 
-Odin gaven eur leem, aosem en sprake. Vili gaven eur benul en beweeglikheid. Vé, as lestens, gaven heur uuterlik en geheur. Disse tweeë bouwden de godenburcht in Asgard.
+Odin gaven ear leaven, ådem en språke. Vili gaven ear benül en beweagelikheid. Vé, as lätstens, gaven ear üüterlik en gehöyr. Disse tweye bouweden de godenbürcht in Asgard.
 
-Uut dit leste könt luu ofnemmen dat 't nog nie drek um 'gewone' meanslike wezens giet, maor um 'n soort leemsbasis of blauwdrökken veur verder leem ('n vergaankboom).
+Üüt dit lätste kün y ofleasen dat et noch neet direkts ümme 'gewoane' menskrlike weasens geyt, mar ümme een soort leavensbasis of blauwdrük vöär verder leaven (nen vergangboum).
 
 {{Dialekt|sdz}}
 
