*Empty MediaWiki Message*

--- a/Kornwallis.mw
+++ b/Kornwallis.mw
@@ -1,4 +1,6 @@
 [[Bestaand:Coccoliths_in_the_Celtic_Sea-NASA.jpg|thumb|Kaorte van Kornwallis (links bovenan) en Frankriek (rechts onderan)]]
+[[Bestaand:CornwallKernowMappa.png|thumb|right|]]
+
 '''Kornwallis''' ([[Engels]]: ''Cornwall'', [[Kornies]]: ''Kernow'') is n bestuurlik graafschap en n [[hartogdom]] in t uterste zuudwesten van [[Engelaand]]. Kornwallis is n schiereilaand dat in t noorden en t westen grenst an de [[Keltiese zee]], in t zujen an t [[t Kanaal]], en in t oosten an de graafschap [[Devon]], waorvan t escheien wörden deur de rivier de [[Tamar]]. Kornwallis hef um en bie de 536.000 inwoeners en beslöt n oppervlakte van 3.563 km<sup>2</sup>, t hef n bevolkingsdichtheid van 150 inw./km<sup>2</sup>. De [[heufdstad]] van Kornwallis is [[Truro]], mer t stadjen [[St Austell]] hef de meeste inwoeners.
 
 Kornwallis hef n ruug en vake nog ongerept laandschap, waorvan [[Bodmin Moor]] n belangriek deel uutmaakt. t Hef n [[zeeklimaot]] mit redelik zachte wienters. Deurdat t der zwat nooit vriest bin veule soorten (in-evoerden) [[subtropies klimaot|subtropiese plaanten]] as [[palmenfamilie|palmen]] en kamerplaanten der ingeburgerd. Deurdat t der merakels veule kan regenen greuit [[Sphagnum|veenmosse]] der as kool, wat dan oek te marken is an de veule [[moor|moerassen]] die der bin. t Toerisme is de belangriekste bron van inkomsten, naost [[visserieje]], [[laandbouw]] en [[bloemeteelt]]. De industrie hef zit veural in de kuststejen [[Vaolmujen (Kornwallis)|Vaolmujen (Falmouth)]], [[Fowey]] en [[Penzance]].
