-ouw in bouw wördt eskreaven as <bow>, c wördt nå k <ks>

--- a/Azoren.mw
+++ b/Azoren.mw
@@ -1,6 +1,6 @@
 De '''Azoren''' ([[Portugees|portugeesk]]: ''Açores''), officieel de '''Selvstürende Azorenstrekke''' (portugeesk: ''Região Autónoma dos Açores'') is ne selvstürende [[vulkaan|vulkaniske]] eilandengruppe under [[Portugal]]. Et ligt ungevear 1360 km up et westen van Portugal, in den [[Atlantiesen Oseaan|Atlantisken Oceaan]], ungevear 880 km noordwestelik van [[Madeira]] en ungevear 1925 km süüdoustelik van [[Newfoundland]].
 
-De grötste wellen van inkumsten sint landbouw, veyholderye (höyvdsakelik vöär [[keze|kaese]] en [[botter]], mär ouk vöär vleisk), [[viskerieje|viskerye]] en [[toerisme|turisme]], wat vöärdan belangryker wördt. Dårby hevt de azorenske regering een anseenlik percent van de inwonners rechtstreaks in deenst of langs darde bedryven. De 'höyvdstad' van de Azoren is [[Ponta Delgada]].
+De grötste wellen van inkumsten sint landbow, veyholderye (höyvdsakelik vöär [[keze|kaese]] en [[botter]], mär ouk vöär vleisk), [[viskerieje|viskerye]] en [[toerisme|turisme]], wat vöärdan belangryker wördt. Dårby hevt de azorenske regering een anseenlik percent van de inwonners rechtstreaks in deenst of langs darde bedryven. De 'höyvdstad' van de Azoren is [[Ponta Delgada]].
 
 Der sint neagen höyvdeilanden en een köppelken mini-eiländkes. Dit sint [[Flores (Azoren)|Flores]] en [[Corvo (Azoren)|Corvo]] in et westen, [[Graciosa]], [[Terceira]], [[São Jorge]] [[Pico]] en [[Faial]] in et midden, en [[São Miguel]], [[Santa Maria]] en et [[Formigasrif]] in et ousten. Se beslåt meyr as 600 km en ligget up ne lyne van noordwest når süüdoust.
 
@@ -11,7 +11,7 @@ De Azoren hevt een mild klimaat vöär öäre noordelike ligging. Dat hevt te do
 Der sit flink wat verskil in kultuur, et dialekt, kokkerye en traditys van de Azoren. Disse eilanden warren ooit unbewond en oaver tweyhunderd jår koloniseerd döär meyrdere volker.
 
 ==Verleaden==
-Een paar [[hypogeum|hypogea]], bouwwarken dee uut de rotsen höwwen sint as [[begreefplak|begräävplaatse]] sint up de eilanden Corvo, Santa Maria en Terceira vünden döär den portugeesken [[archeologie|archeoloog]] Nuno Ribeiro. Hee meanden at se möägelik 2000 jår old warren en dat der dårüm lüde up de eilanden woand müt hebben vöär de portugeesken.<ref>[http://www.cmjornal.xl.pt/detalhe/noticias/ultima-hora/monumentos-funerarios-descobertos-nos-acores Correio da Manhã. Cofina Media. "Estruturas podem ter mais de dois mil anos: Monumentos funerários descobertos nos Açores". ed: J.M.A. Lissabon, Portugal skreaven up 5 määrt 2011 (portugeesk).] bekekken up 18 juni 2011.</ref> Toch lyket disse bouwsels up de Azoren altyd bruked te weasen vöär [[groan|grånupslag]]. Ribeiros bewäringen sint nooit bevästigd en nauwköärig undersöök is der neet dån.<ref>[http://www.acorianooriental.pt/noticias/view/216916 Acoriano Oriental. "Estudos arqueológicos podem indicar presença prévia ao povoamento das ilhas Açoreana Oriental". Skreaven up 27 juni 2011].</ref> Et is neet düdelik of disse bowsels natuurlik untstån sint of döär lüde tosat en of se ölder sint as de portugeeske kolonisering. Hard bewys vöär een vöär-portugeesk volk up de eilanden is neet bekend.
+Een paar [[hypogeum|hypogea]], bowwarken dee uut de rotsen höwwen sint as [[begreefplak|begräävplaatse]] sint up de eilanden Corvo, Santa Maria en Terceira vünden döär den portugeesken [[archeologie|archeoloog]] Nuno Ribeiro. Hee meanden at se möägelik 2000 jår old warren en dat der dårüm lüde up de eilanden woand müt hebben vöär de portugeesken.<ref>[http://www.cmjornal.xl.pt/detalhe/noticias/ultima-hora/monumentos-funerarios-descobertos-nos-acores Correio da Manhã. Cofina Media. "Estruturas podem ter mais de dois mil anos: Monumentos funerários descobertos nos Açores". ed: J.M.A. Lissabon, Portugal skreaven up 5 määrt 2011 (portugeesk).] bekekken up 18 juni 2011.</ref> Toch lyket disse bowsels up de Azoren altyd bruked te weasen vöär [[groan|grånupslag]]. Ribeiros bewäringen sint nooit bevästigd en nauwköärig undersöök is der neet dån.<ref>[http://www.acorianooriental.pt/noticias/view/216916 Acoriano Oriental. "Estudos arqueológicos podem indicar presença prévia ao povoamento das ilhas Açoreana Oriental". Skreaven up 27 juni 2011].</ref> Et is neet düdelik of disse bowsels natuurlik untstån sint of döär lüde tosat en of se ölder sint as de portugeeske kolonisering. Hard bewys vöär een vöär-portugeesk volk up de eilanden is neet bekend.
 
 ===Europääske untdekking===
 [[Bestaand:Azores old map.jpg|thumb|Kaarte van de Azoren uut 1584.]]
@@ -29,9 +29,9 @@ De eilanden wörren oaver hunderden jåren koloniseerd, höyvdsakelik vanuut Por
 
 Et eiland São Jorge wör vöär et eyrste nöämd in [[1439]], mär de feitelike untdekkingsdåtum is neet bekend. In [[1443]] wonnen der al lüde, mär richte kolonisaty begün pas med de kumst van den [[Vlaanderen|vlaamsken]] eadelman [[Wilhelm van der Haegen]]. Hee küm an up et eiland [[Topo (Azoren)|Topo]] wår as hee ouk uut de tyd küm. De eilandbewonners nöämden hüm ''Guilherme da Silveira''. [[João Vaz Corte-Real]] wör bestüürder van et eiland in [[1483]]. [[Velas]] wör ne stad vöär et ende van et [[15e eeuw|15. jårhunderd]]. Teagen [[1490]] wonden der 2000 vlamingen up Terceira, Pico, Faial, São Jorge en Flores. Üm dit groute antal vlamingen wörren de eilanden bekend as de Vlaamske Eilanden of de Eilanden van Vlaanderen. Prins [[Hendrik den Seevårder]] was hyr den anstichter van. Sinne süster, [[Infanta Isabel, Gravinne van Bourgondie|Isabel]] was trouwd med [[Filip den Goden|Graav Filip van Burgondie]], wår Vlaanderen dotyds by höyren. De lüde kümmen in upstand teagen Filips bewind. Seekde en honger kneypen et land uut. Isabel vröög an Hendrik of een antal vlamingen når de Azoren uutvlüchten mochten. Dat vünd hee good en hee gavven öär de nöydige vöärråden med.
 
-Den intrek up de dotyds noch unbewonde eilanden begün in [[1439]], med höyvdsakelik lüde van de vastelandsprovincys [[Algarve]] en [[Alentejo]]. In [[1583]] stüürden [[Filip II van Spanje]], as köäning van Portugal, sinnen vloot üm of te kaarten med ne gruppe van avonturyrs, hüürlingen, vrywilligers en soldåten uut meyrdere landen. Dee wollen de Azoren bruken as springplanke vöär nen uutdager vöär de portugeeske troune. Nå syn sukces in de [[Slag üm Ponta Delgada]] wörren de upstandigen verhüngen an de nökke van de skeape, ümdat Filips vünd at et piraten warren. Dit dröög by an de [[Zwarte Legende|Swarte Legende]] under sinne teagenstanders.
+Den intrek up de dotyds noch unbewonde eilanden begün in [[1439]], med höyvdsakelik lüde van de vastelandsprovincys [[Algarve]] en [[Alentejo]]. In [[1583]] stüürden [[Filip II van Spanje]], as köäning van Portugal, sinnen vloot üm of te kaarten med ne gruppe van avonturyrs, hüürlingen, vrywilligers en soldåten uut meyrdere landen. Dee wollen de Azoren bruken as springplanke vöär nen uutdager vöär de portugeeske troune. Nå syn sukses in de [[Slag üm Ponta Delgada]] wörren de upstandigen verhüngen an de nökke van de skeape, ümdat Filips vünd at et piraten warren. Dit dröög by an de [[Zwarte Legende|Swarte Legende]] under sinne teagenstanders.
 
-In [[1589]] trökken de [[Groot-Brittanje|britten]] up de Azoren an en plünderden een antal eilanden. Ne andere engelske missy teagen de Aczoren, in [[1597]] mislükkede. Spanje höäld de Azoren beleagerd in de Babyloniske Gevangenskap tüsken [[1580]] en [[1642]]. In et [[16e eeuw|16. jårhunderd]], harren de Azoren en [[Madeira]] te maken med oaverbevolking. Dårüm trökken völle lüde van dår uut når [[Brazilië|Brasilie]].<ref>Scammell, G.V. "The First Imperial Age". Unwin Hyman, 1989.</ref>
+In [[1589]] trökken de [[Groot-Brittanje|britten]] up de Azoren an en plünderden een antal eilanden. Ne andere engelske missy teagen de Azoren, in [[1597]] mislükkede. Spanje höäld de Azoren beleagerd in de Babyloniske Gevangenskap tüsken [[1580]] en [[1642]]. In et [[16e eeuw|16. jårhunderd]], harren de Azoren en [[Madeira]] te maken med oaverbevolking. Dårüm trökken völle lüde van dår uut når [[Brazilië|Brasilie]].<ref>Scammell, G.V. "The First Imperial Age". Unwin Hyman, 1989.</ref>
 
 == Verwysings ==
 <references/>
