The website for Foto's van Kornwallis has a change of domain name. The UK will not be able to use .eu domains if it leaves the EU.

--- a/Kornwallis.mw
+++ b/Kornwallis.mw
@@ -53,7 +53,7 @@ Bestaand:Brown willy.JPG|Brown Willy, Bodmin Moor
 
 == Uutgaonde verwiezingen ==
 * [http://www.cornwall.gov.uk/ Cornwall Council]
-* [http://www.marhamchurch.eu/Cornwall_Picture_Gallery.htm Foto's van Kornwallis]
+*[http://www.marhamchurch-kernow.co.uk/Cornwall_Picture_Gallery.htm Foto's van Kornwallis]
 
 {{Commonscat|Cornwall|Kornwallis}}
 
