--- a/Lyste_van_landen_van_de_wearld.mw
+++ b/Lyste_van_landen_van_de_wearld.mw
@@ -622,7 +622,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Malta]]
 |Republik Malta
 |[[Valletta]]
-|[[Engels]]k en [[Maltees]]k: Malta
+|[[Engels]]k en [[maltees]]k: Malta
 |-
 |[[Marokko]]
 |Koaningryk Marokko
