*Empty MediaWiki Message*

--- a/Azoren.mw
+++ b/Azoren.mw
@@ -13,7 +13,7 @@ Der sit flink wat verskil in kultuur, et dialekt, kokkerye en traditys van de Az
 ==Verleaden==
 Een paar [[hypogeum|hypogea]], bowwarken dee uut de rotsen höwwen sint as [[begreefplak|begräävplaatse]] sint up de eilanden Corvo, Santa Maria en Terceira vünden döär den portugeesken [[archeologie|archeoloog]] Nuno Ribeiro. Hee meanden at se möägelik 2000 jår old warren en dat der dårüm lüde up de eilanden woand müt hebben vöär de portugeesken.<ref>[http://www.cmjornal.xl.pt/detalhe/noticias/ultima-hora/monumentos-funerarios-descobertos-nos-acores Correio da Manhã. Cofina Media. "Estruturas podem ter mais de dois mil anos: Monumentos funerários descobertos nos Açores". ed: J.M.A. Lissabon, Portugal skreaven up 5 määrt 2011 (portugeesk).] bekekken up 18 juni 2011.</ref> Toch lyket disse bowsels up de Azoren altyd bruked te weasen vöär [[groan|grånupslag]]. Ribeiros bewäringen sint nooit bevästigd en nauwköärig undersöök is der neet dån.<ref>[http://www.acorianooriental.pt/noticias/view/216916 Acoriano Oriental. "Estudos arqueológicos podem indicar presença prévia ao povoamento das ilhas Açoreana Oriental". Skreaven up 27 juni 2011].</ref> Et is neet düdelik of disse bowsels natuurlik untstån sint of döär lüde tosat en of se ölder sint as de portugeeske kolonisering. Hard bewys vöär een vöär-portugeesk volk up de eilanden is neet bekend.
 
-===Europääske untdekking===
+===Europeeske untdekking===
 [[Bestaand:Azores old map.jpg|thumb|Kaarte van de Azoren uut 1584.]]
 In et [[14e eeuw|14. jårhunderd]] warren de eilanden al bekend. Deylen dervan ståt in de [[Atlas Catalan]]. In [[1427]] untdekten nen kaptein under [[Hendrik den Seevårder]], möägelikerwyse [[Gonçalo Velho]], de Azoren vannys, mär dit steyt neet vaste. In ''A History of the Azores'', een wark uut [[1813]] van [[Thomas Ashe]], beskreyv den skryver nen [[Vlaanderen|Vlaming]], Joshua van der Berg uut [[Brugge]], den as tydens nen storm underweagens når [[Lissabon]] an land most up de eilanden. Hee sea at de portugeesken et gebeed verkend harren en et vöär Portugal upeisd harren. Et gevt noch een paar andere verhalen oaver de untdekking van de eyrste eilanden (São Miguel, Santa Maria en Terceira) döär seylüde under Hendrik den Seevårder, mär der sint weinig geskrivten bekend dee dit bevästiget.
 
