--- a/Televisy.mw
+++ b/Televisy.mw
@@ -2,7 +2,7 @@
 [[Bestaand:Family_watching_television_1958.jpg|thumb|Een family dee tv an et kyken is]]
 '''Televisy''' (afekorted: '''tv''') is een [[telekommunikåty]]systeem vöär et versenden van beweagende bealden en gelüüd oaver afstand. Televisy kwam an et ende van de jåren dertig upsetten, en hevt syn eigen sindsdyn untwikkeld tot een massamedium dat miljarden mensken bereikt. 
 
-In de beginjåren was der allinnig swart-wittelevisy, eyrst later, ende jåren sestig, kwam de klörentelevisy upsetten. Nå de klörentelevisy hevt de untwikkeling sich döäresetted in digitåle televisy, HD, Ultra HD, 3D, ens. In de jåren söäventig kwammen lykegood [[video]]rekorders en later, digitåle systemen, wårunder [[dvd|dvd-rekorders]]. 
+In de beginjåren was der allinnig swart-wittelevisy, eyrst later, ende jåren sestig, kwam de klörentelevisy upsetten. Nå de klörentelevisy hevt de untwikkeling sich döäresetted in digitale televisy, HD, Ultra HD, 3D, ens. In de jåren söäventig kwammen lykegood [[video]]rekorders en later, digitale systemen, wårunder [[dvd|dvd-rekorders]]. 
 
 == Name ==
 Et woord televisy kümt van et [[Grieks|gryksk]]e woord ''tele'' (''τῆλε'') wat ''veare'' beteykent, en et [[Latien|latynske]] woord ''vision'' wat ''sicht'' beteykent, letterlik düs: ''veare kyken''. In et düütsk en däänsk/noorsk wordt tv-kyken dan ouk upeynvolgend ''fernsehen'' en ''fjernsyn'' enöömd. Et [[apparåt]] selv wordt in de sassiske dialekten ouk wel een ''kykkaste'' enöömd. 
@@ -14,7 +14,7 @@ In summige [[geleuf|godsdeenstige]] ströymingen mag der geen tv-ekeaken worden,
 Der bint verskeidene möägelikheyden üm televisy te künnen untvangen:
 
 * Via [[kabeltelevisy]]
-* Digitål via de eter ([[digitenne]] of [[DVB]])
+* Digitaal via de eter ([[digitenne]] of [[DVB]])
 * Via [[satellyt]] ([[skottelantenne]])
 * Via een [[breydbandinternet]]verbinding ([[ADSL]] of [[kabelinternet]])
 * Via [[glasveasel]]
