*Empty MediaWiki Message*

--- a/Televisy.mw
+++ b/Televisy.mw
@@ -1,6 +1,6 @@
 [[Bestaand:Cptvdisplay.jpg|thumb|Een winkel wår tv's in de verkoup stån]]
 [[Bestaand:Family_watching_television_1958.jpg|thumb|Een family dee tv an et kyken is]]
-'''Televisy''' (afekorted: '''tv''') is een [[telekommunikåty]]systeem vöär et versenden van beweagende bealden en gelüüd oaver afstand. Televisy kwam an et ende van de jåren dertig upsetten, en hevt syn eigen sindsdyn untwikkeld tot een massamedium dat miljarden mensken bereikt. 
+'''Televisy''' (afekorted: '''tv''') is een [[telekommunikaty]]systeem vöär et versenden van beweagende bealden en gelüüd oaver afstand. Televisy kwam an et ende van de jåren dertig upsetten, en hevt syn eigen sindsdyn untwikkeld tot een massamedium dat miljarden mensken bereikt. 
 
 In de beginjåren was der allinnig swart-wittelevisy, eyrst later, ende jåren sestig, kwam de klörentelevisy upsetten. Nå de klörentelevisy hevt de untwikkeling sich döäresetted in digitale televisy, HD, Ultra HD, 3D, ens. In de jåren söäventig kwammen lykegood [[video]]rekorders en later, digitale systemen, wårunder [[dvd|dvd-rekorders]]. 
 
