*Empty MediaWiki Message*

--- a/Ysselakademy.mw
+++ b/Ysselakademy.mw
@@ -1,6 +1,6 @@
-De '''Ysselakademy''' (officieel: ''Stichting IJsselacademie'') is een undersööksinstituut vöär de [[Nedersaksies|neadersassiske]] [[dialekt]]en van [[Oaveriessel|Oaveryssel]], dårnåst höldt et sik beasig med regionåle [[geschiedenis|geskydenisse]] en de traditys dee dårmed verbünden bint. Et Ysselakademy is evästigd in de [[Oaveriessel|oaverysselske]] stad [[Zwolle]], en is up-erichted in [[1977]] in [[Kampen]] as de ''Stichting IJsselakademie'' (to noch mid een K). In [[2014]] bint se verhüüsd når [[Zwolle]]. 
+De '''Ysselakademy''' (officieel: ''Stichting IJsselacademie'') is een undersööksinstituut vöär de [[Nedersaksies|neadersassiske]] [[dialekt]]en van [[Oaveriessel|Oaveryssel]], dårnåst höldt et sik beasig med regionale [[geschiedenis|geskydenisse]] en de traditys dee dårmed verbünden bint. Et Ysselakademy is evästigd in de [[Oaveriessel|oaverysselske]] stad [[Zwolle]], en is up-erichted in [[1977]] in [[Kampen]] as de ''Stichting IJsselakademie'' (to noch mid een K). In [[2014]] bint se verhüüsd når [[Zwolle]]. 
 
-Eyrtyds dead de Ysselakademy ouk funkty as [[üütgeaverye]], dee aktiviteiten hebben se inmiddels låten vallen. De werksaamheyden van de Ysselakademy bint dårdöär in de vöärbye jåren versköäven van de üütgåve van boken når de organisåty en üütvoring van multimediåle projekten. 
+Eyrtyds dead de Ysselakademy ouk funkty as [[üütgeaverye]], dee aktiviteiten hebben se inmiddels låten vallen. De werksaamheyden van de Ysselakademy bint dårdöär in de vöärbye jåren versköäven van de üütgåve van boken når de organisaty en üütvoring van multimediale projekten. 
 
 De Ysselakademy hevt ouk een eigen skryvwyse üütebracht, de [[Ysselakademy-spelling]], dee untwikkeld is vöär et [[noordoaverysselsk]], [[Sallaands|sallandsk]] en [[Oost-Veluws|oustveluwsk]]. 
 
