*Empty MediaWiki Message*

--- a/Färöösk.mw
+++ b/Färöösk.mw
@@ -1,4 +1,4 @@
-Et '''färöösk''' of '''färougsk''' (in de språke selv: ''føroyskt'', [[Internationaal Fonetisch Alfabet|uutspråke]]: [{{IPA|ˈføːɹɪst}}]) is ne [[Noord-Germaanse taelen|noordgermaanske]] of [[Skandinavië|skandinaviske]] språke, dee at per 2007 wör esprökken döär ruum 48.000 lüde.
+Et '''färöösk''' of '''färougsk''' (in de språke selv: ''føroyskt'', [[Internasjonaal Klaankenskrift|uutspråke]]: [{{IPA|ˈføːɹɪst}}]) is ne [[Noord-Germaanse taelen|noordgermaanske]] of [[Skandinavië|skandinaviske]] språke, dee at per 2007 wör esprökken döär ruum 48.000 lüde.
 Et is eyne van de officiele språken van de [[Faeröer|Färöer]] (of: ''Färougen''), een anderen is et [[Deens|däänsk]].
 
 {{interwiki|kode=fo|naam=Färööske}}
@@ -12,7 +12,7 @@ Den aparten letter ''edh'' ([[ð]]) wördt up verskeidene wyses uutesprökken. M
 Den samenstelling van et färöösk likt völle up et yslandsk. Wat verskillen sint:
 * [[Etymologie|etymologiserende skryvwyse]]: de skryvwyse van et färöösk wikt slim af van de uutspråke, teagenoaver et yslandsk, dat noch wal up deselvde manere wördt uutesprökken. De skryvwyse wör in [[1846]] döär V.U. Hammarshaimb vastelegd. Yslanders künnet dårdöär et färöösk wal leasen, mär nit verstån.
 * [[dialekt]]en: färöösk hevt völle dialekten, et yslandsk håste ginne.
-* [[oetsproake|uutspråke]]: in et färöösk heb y gin dentåle frikativen (engelsk ''th'', yslandsk ''þ'') - disse sint net as in et sweedsk, noorsk en däänsk verdweynen. 
+* [[oetsproake|uutspråke]]: in et färöösk heb y gin dentale frikativen (engelsk ''th'', yslandsk ''þ'') - disse sint net as in et sweedsk, noorsk en däänsk verdweynen. 
 * [[Taalpurisme|purisme]]: et färöösk hevt net as et yslandsk ne slim beholdende periode had, mär in et färöösk, en vöäral in et esprökkene, sint toch völle däänske leynwöörde in ekümmen.
 
 == Uutgånde verwysingen ==
