*Empty MediaWiki Message*

--- a/Karstboum.mw
+++ b/Karstboum.mw
@@ -3,14 +3,14 @@
 [[Bestaand:Christmas tree.jpg|thumb|[[Nordmann-sparre]] as karstboum]]
 Een '''karstboum''' is een nåldboum dee altyd rund de [[Kìrsttied|karsttyd]] in hüüs ehaald wördt en versyrd wördt mid [[locht|luchtjes]], [[karstballe]]n, slingers, [[engelenhaor|engelehår]], üüteynloupende dekorative figuren so as engelen, renderen, pakjes, en vake een [[piek (karstversiering)|pyk]]. De tradity van de karstboum is mid der tyd uutebreided tot verluchtede en versyrde boumen up pleinen en in parken, stråten en tünen.
 
-In vöäle städen en darpen wördt een groute verluchtede karstboum neaderesetted, meystentyds up een markt, plein of andere centråle plaatse. Eyn van de bekendste vöärbealden hyrvan is de [[fiensparre|fynsparre]] dee elk jår in [[Rockefeller Center]] in [[Niej-York (stad)|Ny-York]] neaderesetted wördt. De boum, dee meystentyds tüsken de 22 en 28 meater houge is, wördt versyrd mid tyndüsenden luchtjes. Et ansteaken van de luchtjes geböärt altyd tydens een twey üre dürende show up de woonsdag nå [[Dankzegingsdag|Dankseagingsdag]] (''Thanksgiving'') en wördt rechtstreaks up tv uutesünden.
+In vöäle städen en darpen wördt een groute verluchtede karstboum neaderesetted, meystentyds up een markt, plein of andere centrale plaatse. Eyn van de bekendste vöärbealden hyrvan is de [[fiensparre|fynsparre]] dee elk jår in [[Rockefeller Center]] in [[Niej-York (stad)|Ny-York]] neaderesetted wördt. De boum, dee meystentyds tüsken de 22 en 28 meater houge is, wördt versyrd mid tyndüsenden luchtjes. Et ansteaken van de luchtjes geböärt altyd tydens een twey üre dürende show up de woonsdag nå [[Dankzegingsdag|Dankseagingsdag]] (''Thanksgiving'') en wördt rechtstreaks up tv uutesünden.
 
 Et moment wårup de karstboum upetöygd wördt verskilt van streak tot streak en van religy tot religy. In [[Nederland]] en [[België|Belgie]] geldt de ungeskreaven regel dat karstboumen en andere karstversyringen eyrst nå [[Sunterkloas|Sünterklås]] ([[5 desember|5]]-[[6 desember|6 december]]) neaderesetted wörden maggen.<ref>'Dreekwart van de bevolking argert syn eigen an karstversyringen by winkels terwyl Sünterklås noch in et land is', [[TNS NIPO]], 5 december 1997</ref> Et spül blivt meystentyds stån tot en mid [[Dreekoningen]] ([[6 jannewaori|6 januåri]]). Vrogger löäten se de boum ouk wel stån tot et feest van [[Maria-Luchtmis]]. Sums wördt wel es eseagd dat et vorddoon van de boum vöär Dreekoningen ungeluk sol brengen, üm toch likt disse upvatting minder vöär te kummen: vöäle neaderlanders doon de karstboum rund de jårwisseling al de döäre üüt. In Düütskland wördt volgens de tradity de karstboum eyrst up de margen van 24 december upetöygd, üm der dan savends de karstkados under te künnen doon.<ref>Jochen Müssig: [http://www.sueddeutsche.de/leben/weihnachtstradition-weltweit-durch-baum-und-zeit-1.246132 ''Weihnachtstradition weltweit – Durch Baum und Zeit''], Süddeutschen Zeitung, 20 december 2006.</ref> 
 
 ==Oorsprung en olderdom van et gebrüük==
 Oaver de olderdom van et gebrüük van de karstboum loupen de bronnen arg uuteyne.
 
-In de [[Romantiek|Romantik]] döäken teoryen up dat de karstboum een [[Germoanen|oldgermaanske]] oorsprung hebben sol, wårby de boum ([[eyk]]) centrål stünd in een [[Zunnewende|middewinter]]vyring (feitelik de [[kortste dag]]). As de boum in de winter te old was, wördden et verbrand vöär warmde. Eyrst tydens de [[middeleewn|middeleywen]] kunnen kaersemakers up groute skåle goodkoupe kaersen maken dee gebrüked wördden üm de boum mead te versyren. In een [[Franken|frankiske]] tekste üüt de [[13e eeuw|13. eyw]] wördt vöär et eyrst een gröne boum vul mid kaersen beskreaven. An et ende van de middeleywen plaatsden inwuners van de [[Elzas]] swinters een boum, versyrd mid kaersen, [[klåtergold]], eklöörd papyr, appels, kook en sükergood in höär hüüs. Dit gebrüük waiden eyrst halverweagen de [[19e eeuw|19. eyw]] oaver når andere westeuropääske landen, wårunder Nederland en Belgie.<ref>[http://www.trouw.nl/tr/nl/4512/Cultuur/article/detail/1813474/2010/10/23/Kerstboom-dook-pas-op-in-19de-eeuw.dhtml 'Karstboum verskeyn eyrst in 19. eyw'], ''Trouw'', 23 oktober 2010</ref><ref>Ron van Gelderen, [http://www.onsamsterdam.nl/component/content/article/32-winter-special-november-december-2010.html?start=5 De segetocht van de karstboum], ''Ons Amsterdam'', november-december 2010</ref><ref>[http://www.history.com/topics/christmas/history-of-christmas-trees History of Christmas trees], History</ref>
+In de [[Romantiek|Romantik]] döäken teoryen up dat de karstboum een [[Germoanen|oldgermaanske]] oorsprung hebben sol, wårby de boum ([[eyk]]) centraal stünd in een [[Zunnewende|middewinter]]vyring (feitelik de [[kortste dag]]). As de boum in de winter te old was, wördden et verbrand vöär warmde. Eyrst tydens de [[middeleewn|middeleywen]] kunnen kaersemakers up groute skåle goodkoupe kaersen maken dee gebrüked wördden üm de boum mead te versyren. In een [[Franken|frankiske]] tekste üüt de [[13e eeuw|13. eyw]] wördt vöär et eyrst een gröne boum vul mid kaersen beskreaven. An et ende van de middeleywen plaatsden inwuners van de [[Elzas]] swinters een boum, versyrd mid kaersen, [[klåtergold]], eklöörd papyr, appels, kook en sükergood in höär hüüs. Dit gebrüük waiden eyrst halverweagen de [[19e eeuw|19. eyw]] oaver når andere westeuropääske landen, wårunder Nederland en Belgie.<ref>[http://www.trouw.nl/tr/nl/4512/Cultuur/article/detail/1813474/2010/10/23/Kerstboom-dook-pas-op-in-19de-eeuw.dhtml 'Karstboum verskeyn eyrst in 19. eyw'], ''Trouw'', 23 oktober 2010</ref><ref>Ron van Gelderen, [http://www.onsamsterdam.nl/component/content/article/32-winter-special-november-december-2010.html?start=5 De segetocht van de karstboum], ''Ons Amsterdam'', november-december 2010</ref><ref>[http://www.history.com/topics/christmas/history-of-christmas-trees History of Christmas trees], History</ref>
 
 De [[christendom|christelike]] karken, en vöäral de [[Rooms-katholieke Karke|rooms-katolike karke]], hebben de karstboum lange tyd eweard. De karstboum hevt mid de inhold van et christelike [[Kìrsttied|karstfeest]] niks van doon. Upvallend genog binnen et jüüst de neagentynde-eywske geystverwanten dee dervöär esörgd hebben dat de karstboum in Neaderland in swang kwam. In de neagentynde eyw hevt [[et Réveil]] een belangryke rolle espöäld by de introdukty van de karstboum. In eyrste instanty hadden allinnig ryke [[Vriezinnig protestantisme|vrysinnige protestantske]] gesinnen een sparre in hüüs, de [[zundagsschoele|sündagsskole]] besörgden hüm breyde populariteit. De sündagsskole, uperichted döär figuren üüt et Réveil, was neet allinnig een geskikte manere üm et evangely te verspreiden mär ouk üm armen van middelen te vöärseen. Sinds dee tyd steyt de karstboum volgens party karken symbool vöär 'et Lucht'.
 
