*Empty MediaWiki Message*

--- a/Lyste_van_landen_van_de_wearld.mw
+++ b/Lyste_van_landen_van_de_wearld.mw
@@ -250,8 +250,8 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Tallinn]]
 |[[Esties|Estisk]]: Eesti
 |-
-|[[Ethiopië|Ethiopie]]
-|Federale Demokratiske Republik Ethiopie
+|[[Ethiopië|Etiopie]]
+|Federale Demokratiske Republik Etiopie
 |[[Addis Abeba]]
 |[[Amhaars]]k: Ītyop'iya / ኢትዮጵያ
 |}
