*Empty MediaWiki Message*

--- a/Noordmacedonie.mw
+++ b/Noordmacedonie.mw
@@ -18,9 +18,9 @@
 | tld = mk | laandkode = MKD | tel = 389
 }}
 
-'''Macedonie''' (in et [[Massedonies|macedonisk]]: ''Република Македонија'', ''Republika Makedonija''), officieel de [[Republiek|Republik]] Macedonie, is een land in de [[Balkan]], in Süüdousteuropa. Et hevt [[Albanië|Albanie]] in et westen, [[Kosovo]] en [[Servië|Servie]] in et noorden, [[Bulgarije|Bulgarie]] in et ousten en [[Griekelaand|Grykenland]] in et süden. Umdät se verskel hebbet med Grykenland oaver den name, wördt et land by vülle internationale instellinges ait '''Vöärmålige Jugoslaviske Republik Macedonie''' nöömd (mangs of-ekorted med de [[engels]]ke ofkörtinge FYROM, Former Yugoslav Republic Of Macedonia). Grykenland hevt namelik ouk ne strekke dee at Macedonie het. Up [[12 juni]] [[2018]] bereikden de regeringen van Macedonie en Grykenland een vöärloupig akkoord dat derto müt lyden dat et land de name '''Republik van Noordmacedonie''' krigt (''Република Северна Македонија'').
+'''Noordmacedonie''' (officieel de ''Republik Noordmacedonie'', in et [[Massedonies|macedonisk]]: ''Република Северна Македонија'', [[albanees]]k: ''Republika e Maqedonisë së Veriut''), is een land in de [[Balkan]] in Süüdousteuropa. Et hevt [[Albanië|Albanie]] in et westen, [[Kosovo]] en [[Servië|Servie]] in et noorden, [[Bulgarije|Bulgarie]] in et ousten en [[Griekelaand|Grykenland]] in et süden. Et land hevt sowat 2,1 miljoon inwonners. De höyvdstad is [[Skopje]].
 
-Et land hevt sowat 2,1 miljoon inwonners. De höyvdstad is [[Skopje]].
+Sinds [[12 febrewaori|12 februåri]] [[2019]] het et land officieel ''Noordmacedonie'', vöär dee tyd wördde et land ''Macedonie'' nöömd, of vuluut: de ''Vöärmålige Jugoslaviske Republik Macedonie''  (mangs afekorted med de [[engels]]ke afkörtinge FYROM, ''Former Yugoslav Republic Of Macedonia''). 
 
 == Landsbeskryvinge ==
 * längde landgrensen: 766 km (151 km med Albanie, 148 km med Bulgarie, 246 km med Grykenland en 221 km med Servie)
@@ -30,11 +30,11 @@ Et land hevt sowat 2,1 miljoon inwonners. De höyvdstad is [[Skopje]].
 * höygste punt: [[Golem Korab]] 2754 m.
 * laegste punt: rivyr de Vardar 44 m
 
-== Europääske Uny ==
-Macedonie hevt ne anvråge dån um to-elåten te worden töt de [[EU|Europääske Uny]] up den [[22 meert|22. määrt]] [[2004]]. Den [[9 november|9. november]] [[2005]] gavven de [[Europese Kommissie|Europääske Kommissy]] öäre tosegging, wat up den [[17 december|17. december]] [[2005]] wör oavernömmen döär de [[Europese Road|Europääske Råd]]. Et land steyt nun up de lyste üm tolåten te worden. Vanof den [[19 augustus|19. augustus]] [[2011]] doot se der oaver vergaderen.
+== Europeeske Uny ==
+Noordmacedonie hevt ne anvråge dån um to-elåten te worden töt de [[EU|Europeeske Uny]] up den [[22 meert|22. määrt]] [[2004]]. Den [[9 november|9. november]] [[2005]] gavven de [[Europese Kommissie|Europeeske Kommissy]] öäre tosegging, wat up den [[17 december|17. december]] [[2005]] wör oavernömmen döär de [[Europese Road|Europeeske Råd]]. Et land steyt nun up de lyste üm tolåten te worden. Vanaf den [[19 augustus|19. augustus]] [[2011]] doot se der oaver vergaderen.
 
 == Steaden ==
-De belangrykste steaden in Macedonie sint:
+De belangrykste städen in Noordmacedonie sint:
 {|
 | valign=top |
 * [[Berovo]]
