*Empty MediaWiki Message*

--- a/Noordmacedonie.mw
+++ b/Noordmacedonie.mw
@@ -10,10 +10,10 @@
 | religie = [[Oosters-Orthodoxe Karke|oustersk-orthodox]] 84%, [[islam|muslim]] 12%
 | regeringsvorm = [[Reppebliek|republik]]
 | km2 = 25.713  | pctwater = 1,8
-| inwonners = 2,1 miljoen | dichtheid = 81,7
-| munteenheid =  [[Denar]] (MKD) | valutakode =  MKD
+| inwonners = 2,1 miljoon | dichtheid = 81,8
+| munteenheid =  [[denar]] (MKD) | valutakode =  MKD
 | tiedzone = +1 (summertyd +2)
-| volksleed = [[Denes Nad Makedonija]]
+| volksleed = [[Denes nad Makedonija]]
 | feestdag = [[2 augustus|2. augustus]]
 | tld = mk | laandkode = MKD | tel = 389
 }}
