--- a/Lyste_van_landen_van_de_wearld.mw
+++ b/Lyste_van_landen_van_de_wearld.mw
@@ -33,7 +33,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Luanda (stad)|Luanda]]
 |[[Portugees]]k: Angola
 |-
-|[[Antigua en Barbuda]]
+|[[Antigua en Barbuda]]{{Info|Düütsk-sasssik: Antigua un Barbuda}}
 |Antigua en Barbuda
 |[[Saint John's (Antigua en Barbuda)|Saint John's]]
 |[[Engels]]k<ref name=defacto />: Antigua and Barbuda
@@ -159,7 +159,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Bangui (Centraal-Afrikaanske Republik)|Bangui]]
 |[[Frans]]k: République Centrafricaine <br /> [[Sango (taal)|Sango]]: Ködörösêse tî Bêafrîka
 |-
-|[[Chili]]
+|[[Chili]]{{Info|Düütsk-sassisk: Chile}}
 |Republik Chili
 |[[Santiago (Chili)|Santiago]]
 |[[Spaans]]k<ref name=defacto />: Chile
@@ -168,6 +168,11 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |Volksrepublik China
 |[[Peking]]
 |[[Standardmandaryn]]: Zhongguo / 中国
+|-
+|[[Colombia]]
+|Republik Colombia
+|[[Bogota (stad)|Bogota]]
+|[[Spaans]]k: Colombia
 |-
 |[[Costa Rica]]
 |Republik Costa Rica
@@ -187,19 +192,19 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 !width=20%|Höyvdstad
 !width=25%|Korte landsname (oorsprungelike taal/talen)
 |-
-|[[Denemarken|Dänemarken]]<ref name=B>Dit land hevt (oaverseyske) ofhankelike gebeden of landen. See ouk et gedeylte [[#Neet-unofhankelike gebeden|neet-unofhankelike gebeden]].</ref>
+|[[Denemarken|Dänemarken]]<ref name=B>Dit land hevt (oaverseyske) ofhankelike gebeden of landen. See ouk et gedeylte [[#Neet-unafhankelike gebeden|neet-unafhankelike gebeden]].</ref>
 |Koaningryk Dänemarken
 |[[Kopenhagen|Koupenhaven]]
 |[[Deens|Däänsk]]: Danmark
 |-
-|[[Djibouti|Djibouti]]
-|Republik Djibouti
-|[[Djibouti (stad)|Djibouti]]
+|[[Djibuti|Djibuti]]
+|Republik Djibuti
+|[[Djibuti (stad)|Djibuti]]
 |[[Arabies|Arabisk]]: Jībūtī / جيبوتي <br /> [[Frans]]k: Djibouti
 |-
-|[[Dominica]]
-|Gemeynebest Dominica
-|[[Roseau (Dominica)|Roseau]]
+|[[Dominika]]
+|Gemeynebest Dominika
+|[[Roseau (Dominika)|Roseau]]
 |[[Engels]]k: Dominica
 |-
 |[[Dominikaanse Reppubliek|Dominikaanske Republik]]
@@ -306,8 +311,8 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Tbilisi]]
 |[[Georgies|Georgisk]]: Sak'art'velo / საქართველო
 |-
-|[[Ghana]]
-|Republik Ghana
+|[[Ghana|Gana]]
+|Republik Gana
 |[[Akkra]]
 |[[Engels]]k: Ghana
 |-
@@ -402,7 +407,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Rome (stad)|Rome]]
 |[[Italiaans]]k: Italia
 |-
-|[[Ivoorkust|Ivoorküst]]<ref>Ivoorküst wördt ouk wel an-edüüd mid de name Côte d'Ivoire.</ref>
+|[[Ivoorkust|Ivoorküst]]
 |Republik Ivoorküst
 |[[Yamoussoukro]]
 |[[Frans]]k: Côte d'Ivoire
@@ -452,11 +457,6 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |Kanada
 |[[Ottawa (stad)|Ottawa]]
 |[[Engels]]k en [[frans]]k: Canada
-|-
-|[[Colombia|Kolumbia]]
-|Republik Kolumbia
-|[[Bogota (stad)|Bogota]]
-|[[Spaans]]k: Colombia
 |-
 |[[Komoren]]
 |Uny der Komoren
@@ -513,7 +513,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Süüdtarawa]]
 |[[Engels]]k en [[Kiribaties|kiribatisk]]: Kiribati
 |-
-|[[Kosovo]]<ref name=Kosovo>De serviske autonome provincy Kosovo (Kosova - Kosovo i Metohija / Косово и Метохија) hevt syn eigen eynsydig unofhankelik verklård en wördt döär 111 landen erkend. Volgens de kosovaarske regering en ouk volgens de websteade [http://www.kosovothanksyou.com/ www.kosovothanksyou.com] wördt de unofhankelikheid van Kosovo erkend döär 114 landen. Dree van disse landen, Nigeria, Uganda en São Tomé en Príncipe, bewären dat se Kosovo neet erkend hebben as unofhankelik land.</ref>
+|[[Kosovo]]<ref name=Kosovo>De serviske autonome provincy Kosovo (Kosova - Kosovo i Metohija / Косово и Метохија) hevt syn eigen eynsydig unafhankelik verklård en wördt döär 111 landen erkend. Volgens de kosovaarske regering en ouk volgens de websteade [http://www.kosovothanksyou.com/ www.kosovothanksyou.com] wördt de unafhankelikheid van Kosovo erkend döär 114 landen. Dree van disse landen, Nigeria, Uganda en São Tomé en Príncipe, bewären dat se Kosovo neet erkend hebben as unafhankelik land.</ref>
 |Republik Kosovo
 |[[Pristina]]
 |[[Albanees]]k: Kosova <br /> [[Servies|servisk]]: Kosovo / Косово
@@ -588,11 +588,6 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 !width=30%|Officiele landsname (neadersassisk)
 !width=20%|Höyvdstad
 !width=25%|Korte landsname (oorsprungelike taal/talen)
-|-
-|[[Massedonië (laand)|Macedonie]]<ref>Macedonie is internationaal ouk bekend as de "Vöärmålige Jugoslaviske Republik Macedonie" (FYROM in et Engelsk).</ref>
-|Republik Macedonie
-|[[Skopje]]
-|[[Massedonies|Macedonisk]]: Makedonija / Македонија
 |-
 |[[Madagaskar]]
 |Republik Madagaskar
@@ -699,7 +694,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |-
 |[[Nauro|Nauru]]
 |Republik Nauru
-|Officieel geyn, in de praktik [[Yaren]]
+|Officieel geen, in de praktyk [[Yaren]]
 |[[Engels]]k: Nauru <br /> [[Nauruaans]]k: Naoero
 |-
 |[[Nederlaand|Neaderland]]<ref name=B />
@@ -737,6 +732,12 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Pyongyang]]
 |[[Koreaans]]k: Chosŏn / 조선
 |-
+|[[Noordmacedonie]]
+|Republik Noordmacedonie
+|[[Skopje]]
+|[[Macedonisk]]: Makedonija / Македонија
+
+|-
 |[[Noorweagen]]<ref name=B />
 |Koaningryk Noorweagen
 |[[Oslo]]
@@ -760,8 +761,8 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Wenen]]
 |[[Duuts|Düütsk]]: Österreich
 |-
-|[[Oost-Timor|Oosttimor]]
-|Demokratiske Republik Oosttimor
+|[[Oost-Timor|Ousttimor]]
+|Demokratiske Republik Ousttimor
 |[[Dili (stad)|Dili]]
 |[[Portugees]]k: Timor-Leste <br /> [[Tetun]]: Timór-Leste
 |}
@@ -794,7 +795,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Spaans]]k: Panamá
 |-
 |[[Papua-Nyguinea]]
-|Unofhankelike Ståt Papua-Nyguinea
+|Unafhankelike Ståt Papua-Nyguinea
 |[[Port Moresby]]
 |[[Engels]]k: Papua New Guinea <br /> [[Hiri Motu]]: Papu Niu Gini <br /> [[Tok Pisin]]: Papua Niugini
 |-
@@ -871,7 +872,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Engels]]k: Solomon Islands
 |-
 |[[Samoa]]
-|Unofhankelike Ståt Samoa
+|Unafhankelike Ståt Samoa
 |[[Apia]]
 |[[Engels]]k: Samoa<br />[[Samoaans]]k: Sāmoa
 |-
@@ -1177,7 +1178,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |}
 
 == Neet algemeyn erkende landen ==
-In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale erkenning missen, mär wel [[de facto]] unofhankelik binnen en de unofhankelikheid uuteröpen hebben. In de kolom ''Erkenning'' stayt et antal ''internationaal erkende unofhankelike ståten'' dat et betreffende gebeed as unofhankelik erkent.
+In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale erkenning missen, mär wel [[de facto]] unafhankelik binnen en de unafhankelikheid uuteröpen hebben. In de kolom ''Erkenning'' stayt et antal ''internationaal erkende unafhankelike ståten'' dat et betreffende gebeed as unafhankelik erkent.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1190,7 +1191,7 @@ In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale
 |Republik Abchazie
 |[[Suchumi]]
 |[[Abchazies|Abchazisk]]: Apsny / Аҧсны <br /> [[Russies|Russisk]]: Abchazija / Абхазия
-|4<ref>[[Abchazie]] wördt döär et groutste deyl van de internationale gemeynskap eseen as een autonome republik van [[Georgië]]. De unofhankelikheid van Abchazie wördt erkend döär Nauru, Nicaragua, Rusland en Venezuela. Abchazie is ouk ooyt erkend döär Vanuatu en Tuvalu, mär disse landen hebben höär erkenning in-etrökken.</ref>
+|4<ref>[[Abchazie]] wördt döär et groutste deyl van de internationale gemeynskap eseen as een autonome republik van [[Georgië]]. De unafhankelikheid van Abchazie wördt erkend döär Nauru, Nicaragua, Rusland en Venezuela. Abchazie is ouk ooyt erkend döär Vanuatu en Tuvalu, mär disse landen hebben höär erkenning in-etrökken.</ref>
 |-
 |[[Arabiske Demokratiske Republik Sahara|ADRS]]
 |Arabiske Demokratiske Republik Sahara (ADRS)
@@ -1202,15 +1203,15 @@ In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale
 |Republik Artsach
 |[[Stepanakert]]
 |[[Armeens]]k: Artsakh / Արցախ
-|0<ref>De [[Republik Artsach]], ouk wel de Republik Nagorno-Karabach enöömd, hevt de kontrole oaver een grout deyl van de regio [[Nagorno-Karabach]], mär wördt döär et groutste deyl van de internationale gemeynskap eseen as een underdeyl van [[Azerbaydjan]]. De unofhankelikheid van Artsach wördt allinnig erkend döär Abchazie, Transnistrie en Süüdossetie, dee selv ouk neet algemeyn erkend binnen.</ref>
+|0<ref>De [[Republik Artsach]], ouk wel de Republik Nagorno-Karabach enöömd, hevt de kontrole oaver een grout deyl van de regio [[Nagorno-Karabach]], mär wördt döär et groutste deyl van de internationale gemeynskap eseen as een underdeyl van [[Azerbaydjan]]. De unafhankelikheid van Artsach wördt allinnig erkend döär Abchazie, Transnistrie en Süüdossetie, dee selv ouk neet algemeyn erkend binnen.</ref>
 |-
-<!-- LET UP! [[Katalonie]] is (noch) neet [[de facto]] unofhankelik -->
+<!-- LET UP! [[Katalonie]] is (noch) neet [[de facto]] unafhankelik -->
 |-
 |[[Volksrepublik Donetsk|Donetsk]]
 |Volksrepublik Donetsk
 |[[Donetsk]]
 |[[Russies|Russisk]]: Donetsk / Донецк
-|0<ref name=oekraine>De [[Volksrepublik Donetsk]] en de [[Volksrepublik Lugansk]] hebben de kontrole oaver een gedeylte van de Ukrainske oblasten [[Oblast Donetsk|Donetsk]] en [[Oblast Luhansk|Luhansk]], mär wörden döär et groutste deyl van de internationale gemeynskap eseen as een underdeyl van [[Ukraine]]. De volksrepubliken erkennen mekaars unofhankelikheid en wörden beide vearder enkeld erkend döär Süüdossetie, dat selv ouk neet algemeyn erkend wördt.</ref>
+|0<ref name=oekraine>De [[Volksrepublik Donetsk]] en de [[Volksrepublik Lugansk]] hebben de kontrole oaver een gedeylte van de Ukrainske oblasten [[Oblast Donetsk|Donetsk]] en [[Oblast Luhansk|Luhansk]], mär wörden döär et groutste deyl van de internationale gemeynskap eseen as een underdeyl van [[Ukraine]]. De volksrepubliken erkennen mekaars unafhankelikheid en wörden beide vearder enkeld erkend döär Süüdossetie, dat selv ouk neet algemeyn erkend wördt.</ref>
 |-
 |[[Islamitiske Ståt (in Irak en de Levant)|Islamitiske Ståt]]
 |Islamitiske Ståt (IS)
@@ -1253,14 +1254,14 @@ In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale
 |Pridnestroviske Moldaviske Republik
 |[[Tiraspol]]
 |[[Moldavies|Moldavisk]]: Transnistria / Транснистря <br /> [[Oekraïens|Ukrains]]k: Pridnistrovja / Придністров'я <br /> [[Russies|Russisk]]: Pridnestrovje / Приднестровье
-|0<ref>[[Transnistrie]] wördt döär et groutste deyl van de internationale gemeynskap eseen as een underdeyl van [[Moldavie]]. De unofhankelikheid wördt enkeld erkend döär Abchazie, Artsach en Süüdossetie, dee selv ouk neet algemeyn erkend binnen.</ref>
+|0<ref>[[Transnistrie]] wördt döär et groutste deyl van de internationale gemeynskap eseen as een underdeyl van [[Moldavie]]. De unafhankelikheid wördt enkeld erkend döär Abchazie, Artsach en Süüdossetie, dee selv ouk neet algemeyn erkend binnen.</ref>
 |}
 
-== Neet-unofhankelike gebeden ==
-Dit is een lyste van [[ofhankelike gebeden]]. Ofhankelike gebeden binnen gebeden dee geyn integraal underdeyl binnen van een land, mär selv ouk neet unofhankelik binnen. Allinnig de Vereynigde Ståten, et Vereynigd Koaningryk, Noorweagen en Nyseyland hebben gebeden ekreëerd dee an disse definity vuldoon. Dårnåst binnen der noch een antal gebeden dee officieel geyn ofhankelike gebeden binnen, mär vanweage höär bysündere ståtus toch vake so eseen wörden. Ouk disse gebeden binnen in de lyste up-enöämen. Een antal landen (Argentinie, Australie, Chili, Frankryk, Nyseyland, Noorweagen en et Vereynigd Koaningryk) hebben een deyl van [[Antarktika]] upeist. Up båsis van et [[Antarktisk Verdrag]] wörden disse anspraken internationaal neet erkend en dårümme binnen disse anspraken ouk neet in de lyste up-enöämen.
+== Neet-unafhankelike gebeden ==
+Dit is een lyste van [[ofhankelike gebeden]]. Ofhankelike gebeden binnen gebeden dee geyn integraal underdeyl binnen van een land, mär selv ouk neet unafhankelik binnen. Allinnig de Vereynigde Ståten, et Vereynigd Koaningryk, Noorweagen en Nyseyland hebben gebeden ekreëerd dee an disse definity vuldoon. Dårnåst binnen der noch een antal gebeden dee officieel geyn ofhankelike gebeden binnen, mär vanweage höär bysündere ståtus toch vake so eseen wörden. Ouk disse gebeden binnen in de lyste up-enöämen. Een antal landen (Argentinie, Australie, Chili, Frankryk, Nyseyland, Noorweagen en et Vereynigd Koaningryk) hebben een deyl van [[Antarktika]] upeist. Up båsis van et [[Antarktisk Verdrag]] wörden disse anspraken internationaal neet erkend en dårümme binnen disse anspraken ouk neet in de lyste up-enöämen.
 
-=== Amerikaanske neet-unofhankelike gebeden ===
-De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[Puerto Rico]] binnen ''georganiseerde neet-ingelyvde territoria'', wat seagen wil dat et ofhankelike gebeden binnen van de Vereynigde Ståten mid een bepålde form van selvbestüür. Dårnåst binnen der noch een antal ''ungeorganiseerde neet-ingelyvde territoria'': [[Baker (eiland)|Baker]], [[Howland (eiland)|Howland]], [[Jarvis (eiland)|Jarvis]], [[Johnston (atol)|Johnston]], [[Kingman (rif)|Kingman]], [[Midway (eiland)|Midway]], [[Navassa]] en [[Wake (eiland)|Wake]]. Disse groutendeyls unbewoande eilandgebeden binnen ouk ofhankelike gebeden van de VS, mär kennen geyn form van selvbestüür. Vöär ståtistiske dooleinden wörden se döär [[ISO 3166-1]] egruppeerd under de name [[Kleine ofgelegen eilanden van de Vereynigde Ståten]]. Ouk [[Palmyra (atol)|Palmyra]], dat een ''ungeorganiseerd ingelyvd territorium'' is en düs wel een integraal underdeyl is van de Vereynigde Ståten, wördt hyrto erekend. De [[CIA]] gruppeert de unbewoande eilanden (behalve Navassa en Wake) in et World Factbook under de name [[United States Pacific Island Wildlife Refuges]].<ref name="cia.gov">https://www.cia.gov/library/publications/the-world-factbook/</ref> [[Bajo Nuevo]] en [[Serranilla]] wörden döär de Vereynigde Ståten ouk upeist as ''ungeorganiseerde neet-ingelyvde territoria'', mär wörden momenteel bestüürd döär [[Kolumbia]]. [[Amerikaansk-Samoa]] is officieel ouk een ''ungeorganiseerd neet-ingelyvd territorium'', mär hevt wel een bepålde form van selvbestüür.
+=== Amerikaanske neet-unafhankelike gebeden ===
+De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[Puerto Rico]] binnen ''georganiseerde neet-ingelyvde territoria'', wat seagen wil dat et ofhankelike gebeden binnen van de Vereynigde Ståten mid een bepålde form van selvbestüür. Dårnåst binnen der noch een antal ''ungeorganiseerde neet-ingelyvde territoria'': [[Baker (eiland)|Baker]], [[Howland (eiland)|Howland]], [[Jarvis (eiland)|Jarvis]], [[Johnston (atol)|Johnston]], [[Kingman (rif)|Kingman]], [[Midway (eiland)|Midway]], [[Navassa]] en [[Wake (eiland)|Wake]]. Disse groutendeyls unbewoande eilandgebeden binnen ouk ofhankelike gebeden van de VS, mär kennen geyn form van selvbestüür. Vöär ståtistiske dooleinden wörden se döär [[ISO 3166-1]] egruppeerd under de name [[Kleine ofgelegen eilanden van de Vereynigde Ståten]]. Ouk [[Palmyra (atol)|Palmyra]], dat een ''ungeorganiseerd ingelyvd territorium'' is en düs wel een integraal underdeyl is van de Vereynigde Ståten, wördt hyrto erekend. De [[CIA]] gruppeert de unbewoande eilanden (behalve Navassa en Wake) in et World Factbook under de name [[United States Pacific Island Wildlife Refuges]].<ref name="cia.gov">https://www.cia.gov/library/publications/the-world-factbook/</ref> [[Bajo Nuevo]] en [[Serranilla]] wörden döär de Vereynigde Ståten ouk upeist as ''ungeorganiseerde neet-ingelyvde territoria'', mär wörden momenteel bestüürd döär [[Colombia]]. [[Amerikaansk-Samoa]] is officieel ouk een ''ungeorganiseerd neet-ingelyvd territorium'', mär hevt wel een bepålde form van selvbestüür.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1339,7 +1340,7 @@ De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[P
 |[[Engels]]k<ref name=defacto />: Wake Island
 |}
 
-=== Australiske neet-unofhankelike gebeden ===
+=== Australiske neet-unafhankelike gebeden ===
 Australie hevt söäven eksterne territoria. Disse territoria wörden döär de australiske oaverheid eseen as een integraal underdeyl van Australie<ref>[http://www.aph.gov.au/parliamentary_Business/Committees/House_of_Representatives_Committees?url=ncet/nicitizenshipre-referral/chapter2.pdf Parliament of Australia - Norfolk Island and the Commonwealth]</ref><ref>[http://www.aph.gov.au/parliamentary_business/committees/house_of_representatives_committees?url=itrdlg/coastalshipping/subs/sub27.pdf Parliament of Australia - Submission to the inquiry into coastal shipping policy and regulation]</ref>, mär wörden vake toch eseen as ofhankelike gebeden van Australie. Et [[Australisk Antarktisk Territorium]] wördt as ansprake internationaal neet erkend en is dan ouk neet in disse lyste up-enöämen.
 
 {| class="wikitable" style="width: 100%;"
@@ -1379,7 +1380,7 @@ Australie hevt söäven eksterne territoria. Disse territoria wörden döär de 
 |[[Engels]]k: Norfolk Island <br /> [[Norfuk]]: Norfuk Ailen
 |}
 
-=== Britske neet-unofhankelike gebeden ===
+=== Britske neet-unafhankelike gebeden ===
 De veerteen [[britske oaverseyske gebeden]] binnen geyn integraal underdeyl van et Vereynigd Koaningryk, mär binnen hyr wel van ofhankelik en vallen under de britske suvereiniteit. De ansprake van et [[Britsk Antarktisk Territorium]] wördt internationaal neet erkend en is düs neet in de lyste up-enöämen. [[Jersey (eiland)|Jersey]], [[Guernsey]] en [[Man (eilaand)|Man]] vallen as [[Brits Kroonbezit|britske kroonbesittingen]] neet under de suvereiniteit van et Vereynigd Koaningryk, mär under de suvereiniteit van de britske krone en hebben dårdöär een andere relaty tot et Vereynigd Koaningryk.
 
 {| class="wikitable" style="width: 100%;"
@@ -1469,7 +1470,7 @@ De veerteen [[britske oaverseyske gebeden]] binnen geyn integraal underdeyl van 
 |[[Engels]]k<ref name=defacto />: South Georgia and the South Sandwich Islands
 |}
 
-=== Chinääske neet-unofhankelike gebeden ===
+=== Chineeske neet-unafhankelike gebeden ===
 [[Hongkong]] en [[Makau]] maken feitelik integraal deyl uut van China, mär hebben een speciale bestüürlike ståtus, wårdöär se vake as ofhankelike gebeden eseen wörden.
 
 {| class="wikitable" style="width: 100%;"
@@ -1481,15 +1482,15 @@ De veerteen [[britske oaverseyske gebeden]] binnen geyn integraal underdeyl van 
 |[[Hongkong]]
 |Speciale Bestüürlike Regio
 |Hongkong
-|[[Chinese talen|Chinääsk]]: Xiānggǎng / ([[Standardkantonees]]k): Heung Kôong / 香港 <br /> [[Engels]]k: Hong Kong
+|[[Chinese talen|Chineesk]]: Xiānggǎng / ([[Standardkantonees]]k): Heung Kôong / 香港 <br /> [[Engels]]k: Hong Kong
 |-
 |[[Makau]]
 |Speciale Bestüürlike Regio
 |Makau
-|[[Chinese talen|Chinääsk]]: Àomén / ([[Standardkantonees]]k): Òow Mǒe / 澳门 <br /> [[Portugees]]k: Macau
+|[[Chinese talen|Chineesk]]: Àomén / ([[Standardkantonees]]k): Òow Mǒe / 澳门 <br /> [[Portugees]]k: Macau
 |}
 
-=== Däänske neet-unofhankelike gebeden ===
+=== Däänske neet-unafhankelike gebeden ===
 [[Färöer]] en [[Gruunlaand|Gröönland]] binnen autonome provincys van et [[Koninkriek Denemarken|Koaningryk Dänemarken]] en maken feitelik integraal deyl uut van dat land. Vake wörden se eseen as ofhankelike gebeden mid een groute form van autonomy.
 
 {| class="wikitable" style="width: 100%;"
@@ -1509,7 +1510,7 @@ De veerteen [[britske oaverseyske gebeden]] binnen geyn integraal underdeyl van 
 |[[Gruunlaans|Gröönlandsk]]: Kalaallit Nunaat
 |}
 
-=== Finske neet-unofhankelike gebeden ===
+=== Finske neet-unafhankelike gebeden ===
 [[Åland]] maakt feitelik integraal underdeyl uut van Finland, mär hevt sinds de [[Vreade van Parys (1856)]] een internationaal erkende speciale ståtus mid groute autonomy.
 
 {| class="wikitable" style="width: 100%;"
@@ -1524,7 +1525,7 @@ De veerteen [[britske oaverseyske gebeden]] binnen geyn integraal underdeyl van 
 |[[Zweeds|Sweedsk]]: Åland
 |}
 
-=== Franske neet-unofhankelike gebeden ===
+=== Franske neet-unafhankelike gebeden ===
 Alle [[franske oaverseyske gebeden]] maken integraal underdeyl uut van Frankryk<ref>[http://www.servat.unibe.ch/icl/fr00000_.html#A072_ ICL - France Constitution]</ref> en et land kent düs officieel geyn ofhankelike gebeden. De franske oaverseyske gebeden wörden wel vake so eseen<ref>http://www.nationsonline.org/oneworld/territories.htm</ref>, al wörden soms allinnig de oaverseyske gebeden dee geyn oaverseysk departement binnen, eseen as ofhankelike gebeden<ref name="cia.gov"/>. Vöär de vulledigheid stån hyr alle franske oaverseyske gebeden by up. Let up dat by de [[Franske Südelike en Antarktiske Gebeden]] de ansprake up een deyl van [[Antarktika]] internationaal neet erkend wördt.
 
 {| class="wikitable" style="width: 100%;"
@@ -1599,7 +1600,7 @@ Alle [[franske oaverseyske gebeden]] maken integraal underdeyl uut van Frankryk<
 |[[Frans]]k: Wallis-et-Futuna
 |}
 
-=== Neaderlandske neet-unofhankelike gebeden ===
+=== Neaderlandske neet-unafhankelike gebeden ===
 Et [[Koaningryk der Nederlanden]] bestayt uut veer gelykwaerdige landen: [[Nederlaand|Neaderland]], [[Aruba]], [[Kurasou|Curaçao]] en [[Sunt-Marten (land)|Sünt-Marten]]. Disse lätste dree binnen düs officieel geyn ofhankelike gebeden van Nederland, mär wörden toch vake so eseen. De karibiske eilanden [[Bonaire]], [[Sunt-Eustasius|Sünt-Eustatius]] en [[Saba]] maken as [[Karibisk Nederland|bysündere gemeynte]] deyl uut van et land Nederland. Vöär ståtistiske dooleinden wörden disse dree BES-eilanden döär [[ISO 3166-1]] as eyn gebeed egruppeerd.
 
 {| class="wikitable" style="width: 100%;"
@@ -1639,8 +1640,8 @@ Et [[Koaningryk der Nederlanden]] bestayt uut veer gelykwaerdige landen: [[Neder
 |[[Engels]]k en [[Nederlaans|neaderlandsk]]: Sint Maarten
 |}
 
-=== Nyseylandske neet-unofhankelike gebeden ===
-De [[Cookeilanden]] en [[Niue]] binnen selvbestürende gebeden in vrye associaty mid Nyseyland en wörden soms as unofhankelike landen eseen. [[Tokelau]] en [[Ross Dependency]] binnen beide ofhankelike gebeden van Nyseyland, mär de (antarktiske) ansprake up Ross Dependency wördt internationaal neet erkend.
+=== Nyseylandske neet-unafhankelike gebeden ===
+De [[Cookeilanden]] en [[Niue]] binnen selvbestürende gebeden in vrye associaty mid Nyseyland en wörden soms as unafhankelike landen eseen. [[Tokelau]] en [[Ross Dependency]] binnen beide ofhankelike gebeden van Nyseyland, mär de (antarktiske) ansprake up Ross Dependency wördt internationaal neet erkend.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1664,7 +1665,7 @@ De [[Cookeilanden]] en [[Niue]] binnen selvbestürende gebeden in vrye associaty
 |[[Engels]]k en [[tokelaus]]k: Tokelau
 |}
 
-=== Noorske neet-unofhankelike gebeden ===
+=== Noorske neet-unafhankelike gebeden ===
 [[Spitsbargen]] maakt feitelik integraal underdeyl uut van Noorweagen, mär hevt volgens et [[Spitsbargenverdrag]] een internationaal erkende speciale ståtus mid groute autonomy. Ouk [[Jan Mayen]] maakt integraal deyl uut van Noorweagen as underdeyl van de provincy [[Nordland (provincy)|Nordland]], mär wördt vake toch eseen as ofhankelik gebeed. Vöär ståtistiske dooleinden wördt [[Jan Mayen]] in [[ISO 3166-1]] samenevoogd mid Spitsbargen as [[Spitsbargen en Jan Mayen]]. [[Bouveteiland]], [[Peter I-eiland]] en [[Koningin Maudland]] binnen wel ofhankelike gebeden van Noorweagen, mär de (antarktiske) ansprake up de lätste twee wörden internationaal neet erkend.
 
 {| class="wikitable" style="width: 100%;"
