/* Algemeyn erkende landen */

--- a/Lyste_van_landen_van_de_wearld.mw
+++ b/Lyste_van_landen_van_de_wearld.mw
@@ -364,8 +364,8 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Tegucigalpa]]
 |[[Spaans]]k: Honduras
 |-
-|[[Hongaarnlaand|Hongarie]]
-|Hongarie
+|[[Hongaarnlaand|Hungarie]]
+|Hungarie
 |[[Budapest]]
 |[[Hongaars]]k: Magyarország
 |}
@@ -468,9 +468,9 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Brazzaville]]
 |[[Frans]]k: Congo
 |-
-|[[Kongo-Kinshasa]]
+|[[Demokratiese Republiek van de Kongo|Kongo-Kinsjasa]]
 |Demokratiske Republik Congo
-|[[Kinshasa]]
+|[[Kinsjasa]]
 |[[Frans]]k: Congo
 |-
 |[[Kuba]]
@@ -513,7 +513,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Süüdtarawa]]
 |[[Engels]]k en [[Kiribaties|kiribatisk]]: Kiribati
 |-
-|[[Kosovo]]<ref name=Kosovo>De serviske autonome provincy Kosovo (Kosova - Kosovo i Metohija / Косово и Метохија) hevt syn eigen eynsydig unafhankelik verklård en wördt döär 111 landen erkend. Volgens de kosovaarske regering en ouk volgens de websteade [http://www.kosovothanksyou.com/ www.kosovothanksyou.com] wördt de unafhankelikheid van Kosovo erkend döär 114 landen. Dree van disse landen, Nigeria, Uganda en São Tomé en Príncipe, bewären dat se Kosovo neet erkend hebben as unafhankelik land.</ref>
+|[[Kosovo]]<ref name=Kosovo>De serviske autonome provincy Kosovo (Kosova - Kosovo i Metohija / Косово и Метохија) hevt syn eigen eynsydig unafhankelik verklård en wördt döär 111 landen erkend. Volgens de kosovaarske regering en ouk volgens de websteade [http://www.kosovothanksyou.com/ www.kosovothanksyou.com] wördt de unafhankelikheid van Kosovo erkend döär 116 landen. Dree van disse landen, Nigeria, Uganda en São Tomé en Príncipe, bewären dat se Kosovo neet erkend hebben as unafhankelik land. Twey andere landen (Burundi en Suriname) hebben de erkenning inetrökken.</ref>
 |Republik Kosovo
 |[[Pristina]]
 |[[Albanees]]k: Kosova <br /> [[Servies|servisk]]: Kosovo / Косово
@@ -541,10 +541,10 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Vientiane (stad)|Vientiane]]
 |[[Laotiaans]]k: Lao / ນລາວ
 |-
-|[[Lesotho]]
-|Koaningryk Lesotho
+|[[Lesotho|Lesoto]]
+|Koaningryk Lesoto
 |[[Maseru (stad)|Maseru]]
-|[[Engels]]k en [[süüdsotho]]: Lesotho
+|[[Engels]]k en [[süüdsoto]]: Lesotho
 |-
 |[[Letlaand|Letland]]
 |Republik Letland
@@ -571,8 +571,8 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Vaduz]]
 |[[Duuts|Düütsk]]: Liechtenstein
 |-
-|[[Litouwen|Litauwen]]
-|Republik Litauwen
+|[[Litouwen|Litauen]]
+|Republik Litauen
 |[[Vilnius]]
 |[[Litouws|Litauwsk]]: Lietuva
 |-
@@ -911,8 +911,8 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Freetown]]
 |[[Engels]]k: Sierra Leone
 |-
-|[[Singapore]]
-|Republik Singapore
+|[[Singapur]]
+|Republik Singapur
 |Singapore
 |[[Engels]]k: Singapore <br /> [[Maleis]]k: Singapura <br /> [[Mandarien (taal)|Mandaryn]]: Xinjiapo / 新加坡 <br /> [[Tamil (taal)|Tamil]]: Čiṅkappūr / சிங்கப்பூர்
 |-
@@ -1004,10 +1004,10 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Dodoma (stad)|Dodoma]]
 |[[Engels]]k<ref name=defacto /> en [[Swahili (taal)|swahili]]<ref name=defacto />: Tanzania
 |-
-|[[Thailaand|Thailand]]
-|Koaningryk Thailand
+|[[Thailaand|Tailand]]
+|Koaningryk Tailand
 |[[Bangkok]]
-|[[Thai (taal)|Thai]]: Prathet Thai / ประเทศไทย
+|[[Thai (taal)|Taisk]]: Prathet Thai / ประเทศไทย
 |-
 |[[Togo]]
 |Republik Togo
