--- a/Willem_van_Oranje.mw
+++ b/Willem_van_Oranje.mw
@@ -1,7 +1,7 @@
 [[Ofbeelding:WilliamOfOrange1580.jpg|250px|thumb|Willem van Oranje]]
-'''Willem van Oranje-Nassau''' ([[Dillenburg]], [[24 april]] [[1533]] — [[Delft]], [[10 juli]] [[1584]]), [[Prins van Oranje (titel)|Prins van Oranje]], [[Graof]] van [[Nassau]], bekend äls '''Willem van Oranje''', was de initiatiefnemer en leider van [[Tachtigjaorige Oorlog|de Opstand]] tegen de [[Spanje|Spaanse]] [[Könning (titel)|koning]] [[Filips II van Spanje|Filips II]].
+'''Willem van Oranje-Nassau''' ([[Dillenburg]], [[24 april]] [[1533]] — [[Delft]], [[10 juli]] [[1584]]), [[Prins van Oranje (titel)|Prins van Oranje]], [[Graof]] van [[Nassau]], bekend äs '''Willem van Oranje''', was de initiatiefnemer en leider van [[Tachtigjaorige Oorlog|de Opstand]] tegen de [[Spanje|Spaanse]] [[Könning (titel)|koning]] [[Filips II van Spanje|Filips II]].
 
-De Opstand staat in de geschiedenisboeken bekend als de [[Tachtigjaorige Oorlog]] en leiden tot een onafhankelijk [[Nederlaand|Nederland]]. In de kronieken, brieven en dokementen van de [[16e eeuw]] wordt der soms gesproken over de Opstand. In de [[letterkunde|literetuur]] van vandaag wordt 't begin van de Tachtigjaorige Oorlog vake an-eduud mit ''de Opstand'' of ''de Nederlaanse Opstand''.
+De Opstand steet in de geschiedenisboeken bekend äs de [[Tachtigjaorige Oorlog]] en leiden tot een onofhankelijk [[Nederlaand]]. In de kronieken, brieven en dokementen van de [[16e eeuw]] wordt der soms esproken aover de Opstand. In de [[letterkunde|literetuur]] van vandage wordt 't begin van de Tachtigjaorige Oorlog vake an-eduud mit ''de Opstand'' of ''de Nederlaanse Opstand''.
 
 Umdät Willem van Oranje [[protestantisme|protestans]] was, was e dus ok niet veur één godsdienst, de [[religie|heufdreligie]] was in die tied namelijk 't [[Rooms-Katholieke Karke|rooms-kattelicisme]], de Spaanse koning wol dan ok 't [[protestantisme]] in Nederlaand uutreuien. Eén van de bekendste uutspraken van Willem van Oranje was: ''Ik kan niet goedkeuren dat vorsten over het geweten van hun onderdanen willen heersen en hun de vrijheid van geloof en godsdienst ontnemen''. Disse woorden werden uut-esproken op [[31 december]] [[1564]] in de [[Raod van Staote]]. Mit disse woorden werd 't conflict mit de koning van Spanje (Filips II) onder woorden ebrach.
 
