--- a/Vrymestelarye.mw
+++ b/Vrymestelarye.mw
@@ -1,3 +1,4 @@
+{{Soamenvougen|Vrijmezzelderij}}
 De '''vrymetselarye''' of '''maçonnery''' is een bröderskap, den oaver de heyle wearld besteyt. Et is de land en dårbinnen de regio up-edealed. De lüde wat der lid van bint, willet sichsülv een better menske maken. Dat doot sy med olde rituelen en mekare leavensvrågen te besprekken. Wat et dool hevt dat mensken mekare nemmet so as se bint en mekare hülpet üm een bettere wearld te krygen. De leaden dervan wördet ''vrymetselaars'' of når et ängelsk: ''free-masons'' enöömd, wat koamt van et vranske woord ''frère-maçons'' (betekkend so yts as: bröder-bouwer).
 
 ===Loges===
