--- a/Vrijmezzelderij.mw
+++ b/Vrijmezzelderij.mw
@@ -1,3 +1,4 @@
+{{Soamenvougen|Vrymestelarye}}
 [[Bestaand:Square compasses.svg|right|thumb|250px|Logo van de vrijmezzelderij]]
 De '''Vrijmezzelderij''' (Ter Loan nuimt ook '''Vrijmesonerij''') is n wereldomspannende demokroatische bewegen, woarbie de leden streven om n beter mìns te worden en willen biedroagen aan n betere soamleven. Leden kommen bieainkander ien lozies veur rituwele bieainkomsten en om lezingen bie te wonen. Aan t heufd van zonnen lozie staait n verkozen Achtboare Meester. Aal lozies ien n gebied kommen geregeld bieainkander onder n "[[Groot Oosten]]" of "[[Groot Lozie]]", dij veurzitten wordt deur n verkozen [[Grootmeester]]. t Woord "Oosten" in "Groot Oosten" verwiest noar de plek woar de verlichting vandoan komt, de zunne komt immers op in t oosten. 
 
