*Empty MediaWiki Message*

--- a/Pronkjewail.mw
+++ b/Pronkjewail.mw
@@ -1,1 +1,7 @@
-'''Pronkjewail''' is ain Grönnens gerecht mit dreuge appels, ferse wurst und stroop. In Holland wurdt das Gerecht ''hete bliksem'' genuumd.
+[[Bestaand:Himmel-und-Erde-01.jpg|thumb|Pronkjewail]]
+'''Pronkjewail''' is een [[Grunnen (provìnzie)|Grönnegs]] gerecht mit dreuge [[appel]]s, varse worst en stroop. Ien t [[Nederlaands]] wordt t gerecht ''hete bliksem'' nuimd.
+
+{{Begin|gos}}
+
+{{Dialekt|gos}}
+[[Kategorie:Gerecht]]
