--- a/Life_After_People.mw
+++ b/Life_After_People.mw
@@ -3,7 +3,7 @@
 In disse ryge prakkideanket geleyrden en ingeniörs wat der med gebouwen, städen, tamme deren, en so meyr, sol geböären as de menske upeyns verdwynen sol. Dår vöär kyket se når bestånde steades, dee as al jåren of eywen verlåten bint. Kumt der üüt dat asset wy et neet by holdet, dat alles van sülvs kapot geyt. Water löpt oaver en de böume, planten en andere deren nemmet alles oaver.
 
 == Ofleaverings ==
-{{Kolommen3|Kolom1=
+{{Kolommen|kolom1=
 === Seisoon 1 ===
 # ''The Bodies Left Behind''
 # ''Outbreak''
@@ -15,7 +15,7 @@ In disse ryge prakkideanket geleyrden en ingeniörs wat der med gebouwen, städe
 # ''Armed & Defenseless''
 # ''Roads to Nowhere''
 # ''Waters of Death''
-|Kolom2=
+|kolom2=
 === Seisoon 2 ===
 # ''Wrath of God''
 # ''Toxic Revenge''
