--- a/Romantiek.mw
+++ b/Romantiek.mw
@@ -1,3 +1,4 @@
+{{Soamenvougen|Romantik (strouming)}}
 De '''Romantiek''' is 'n streuming in de Westerse kultuur. Disse streuming kö-j vinnen in de (skeelder)kuns, skrieveri'je en ok nog bi'j teengsworigse subkulturen, deank beveurbeeld an de [[Hippiekultuur|Hippies]] uut de jaoren 60 en de milieubeweging van toe en noe. 
 
 === Kört over de gedachtenisse van de Romantiek ===
