--- a/Romantik_(strouming).mw
+++ b/Romantik_(strouming).mw
@@ -1,3 +1,4 @@
+{{Soamenvougen|Romantiek}}
 De '''Romantik''' was (of is nog steads) een strouming in de [[kunst|künst]] en de [[filosofie|filosofy]]. Et hadde syn höygtepünte in de westerske kulture in de 18. en 19. eywe. De Romantik sol noit echt oaver-egåne weasen, y künt et noch oaveral wear vinden.
 
 '' Et rusen in de boumtoppen en et rollen van de dunder hebbet my dinge van God vertelled, dee ik neet in woorden uutdrükken kanne.''
