--- a/Indonezie.mw
+++ b/Indonezie.mw
@@ -31,5 +31,5 @@ Indonezie kint n huil ìnde toalen, veural in [[Papoea]], môr ook op [[Celebes]
 {{dia|Schreven in t [[Veenkelonioals]]}}
 
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Indonezie]]
+[[Kategorie:Indonezie| ]]
 [[Kategorie:Laand]]
