--- a/Wakan_Tanka.mw
+++ b/Wakan_Tanka.mw
@@ -6,5 +6,6 @@ Vöäle andere inheymsk amerikaanske stammen hebbet een weasen wat up hüm lekt.
 
 Inheymske amerikanen bint oaver et algemeyn [[Animisme|animisten]]; gelöyvet düs dat alles een sele hevt. Wakan Tanka döt alles beselen in et heylal; steyne, planten en deren (wårunder düs ouk mensken). Dårümme segget sy dat Wakan Tanka de skepper is en gelyker tyd ís he ouk de skepping.
 
-{{Dialekt|sdz]]}}
+{{Dialekt|sdz}}
+
 [[Kategorie:Geleuf]]
