--- a/Zwolle.mw
+++ b/Zwolle.mw
@@ -4,14 +4,14 @@ naam = Zwolle |
 bestaansnaam vlagge =Flag_of_Zwolle.svg |
 bestaansnaam wapen =  Coat of arms of Zwolle.svg |
 lokasie = LocatieZwolle |
-previnsie = [[Oaveriessel|Aoveriessel]] |
+previnsie = [[Oaveriessel|Åveryssel]] |
 heufplaose = '''Zwolle''' |  
 oppervlak = 119,28 |
 oppervlak laand = 111,65 |
 oppervlak waoter = 7,63 |
-inwoeners = 125.592 |
-daotum inwoeners = [[januari]] [[2017]] |
-dichtheid = 1012 |
+inwoeners = 127.608 |
+daotum inwoeners = [[januari]] [[2019]] |
+dichtheid = 1070 |
 breedtegraod = 52/31/0/N |
 lengtegraod = 6/5/0/E |
 verkeersaoder = A28, A50, A35, N331, N337, N340, N764; spoor naor [[Grunnen (stad)|Groningen]], [[Liwwadden (stad)|Leeuwarden]], [[Amersfoort]], [[Em (plaots)|Emmen]], [[Almelo]], [[Arnem]], [[Utrecht (stad)|Utrecht]] en [[Kampen (Overiessel)|Kampen]] |
@@ -19,7 +19,7 @@ netnummer = 038 |
 postcode = 8000-8049 |
 webstee = [http://www.zwolle.nl www.zwolle.nl] |
 }}
-'''Zwolle''' is n gemeente en de [[heufdstad|eufdstad]] van de [[pervincie|provinsie]] [[Oaveriessel|Aoveriessel]] en ok [[Hanze|Anzestad]]. Zwolle ligt an de [[Iessel]], t [[Zwärte Wäter|Zwärte Water]] en an de [[Vechte]]. De gemeente ad in [[januari]] [[2017]] zo'n 125.592 inwoners (bron: CBS) en ef n oppervlakte van 111,33 [[vierkaante kilemeter|km²]].
+'''Zwolle''' is n gemeente en de [[heufdstad|eufdstad]] van de [[pervincie|provinsie]] [[Oaveriessel|Aoveriessel]] en ok [[Hanze|Anzestad]]. Zwolle ligt an de [[Iessel]], t [[Zwärte Wäter|Zwärte Water]] en an de [[Vechte]]. De gemeente ad in [[januari]] [[2017|2019]] zo'n 127.608 inwoners (bron: CBS) en ef n oppervlakte van 119,28 [[vierkaante kilemeter|km²]].
 
 De inwoners van disse stad numen ze formeel ''Zwollenären''. Ze wörren ok wel ''blauwvingers'' of ''bri'jbekken'' enuumd.
 
