iets verkeerd edaon

--- a/Kampen_(Overiessel).mw
+++ b/Kampen_(Overiessel).mw
@@ -9,7 +9,7 @@ oppervlak = 161,79 |
 oppervlak laand = 142,64 |
 oppervlak waoter = 19,15 |
 inwoeners = 53.259 |
-daotum inwoeners = 1 mei 2019 |
+daotum inwoeners = 1 januari 2019 |
 dichtheid = 329 |
 breedtegraod = 52/33/0/N |
 lengtegraod = 5/54/0/E |
