--- a/Stienwiekerlaand.mw
+++ b/Stienwiekerlaand.mw
@@ -8,9 +8,9 @@
 | oppervlak = 321,69
 | oppervlak laand = 291,12
 | oppervlak waeter = 30,56
-| inwoners = 43.183
+| inwoners = 43.768
 | daotum inwoners = [[1 juni]] [[2007]]
-| dichthied = 148
+| dichthied = 136
 | brettegraod = 57/47/0/N
 | lengtegraod = 6/7/0/E
 | verkeersaoder = A32, N331, N334; spoorliende [[Zwolle]]-[[Liwwadden (stad)|Liwwadden]]
@@ -19,7 +19,7 @@
 | webstee = [http://www.steenwijkerland.nl www.steenwijkerland.nl]
 }}
 
-'''Stienwiekerlaand''' (plaetselik: ''Steenwiekerlaand'') is een [[gemiente (bestuur)|gemiente]] in de [[Kop van Overiessel]]. De gemiente had op [[1 juni]] [[2007]] 43.183 inwoners (bron: CBS) en het een oppervlakte van 322 [[vierkaante kilemeter|km²]].
+'''Stienwiekerlaand''' (plaetselik: ''Steenwiekerlaand'') is een [[gemiente (bestuur)|gemiente]] in de [[Kop van Overiessel]]. De gemiente had op [[1 juni|1 januari 2019]] 43.768 inwoners (bron: CBS) en het een oppervlakte van 322 [[vierkaante kilemeter|km²]].
 
 De gemiente is op [[1 jannewaori]] [[2001]] ontstaon deur et saemenvoegen van de gemienten [[Brederwiede]], [[Iesselham]] en [[Stienwiek]]. Anvankelik was de naeme van de ni'je gemiente ok Stienwiek, mar op [[1 jannewaori]] [[2003]] wodde de gemiente hernuumd tot Stienwiekerlaand. De gemiente komt grotendiels overiene mit et historische [[Laand van Veno]], naost [[Tweante|Twente]] en [[Sallaand]] de dadde laandstreek van Overiessel.
 
