*Empty MediaWiki Message*

--- a/Zwolle.mw
+++ b/Zwolle.mw
@@ -4,7 +4,7 @@ naam = Zwolle |
 bestaansnaam vlagge =Flag_of_Zwolle.svg |
 bestaansnaam wapen =  Coat of arms of Zwolle.svg |
 lokasie = LocatieZwolle |
-previnsie = [[Oaveriessel|Åveryssel]] |
+previnsie = [[Oaveriessel|Aoveriessel]] |
 heufplaose = '''Zwolle''' |  
 oppervlak = 119,28 |
 oppervlak laand = 111,65 |
