--- a/Olst-Wieje.mw
+++ b/Olst-Wieje.mw
@@ -21,7 +21,7 @@
 }}
 '''Olst-Wieje''' ([[Nederlaands|Nederlands]]: ''Olst-Wijhe'') is n [[gemiente (bestuur)|gemeente]] in de [[Nederland]]se [[provinsie]] [[Oaveriessel|Aoveriessel]]. De gemeente is op [[1 jannewaori]] [[2001]] ontstaon uut t samengaon van de gemeenten [[Olst]] en [[Wye]].
 
-De boerschoppen Marle en Welsum bint [[exklave]]s, die an de westkante van de Iessel liggen. Olst-Wieje had op 1 mei 2014 ongeveer 17.792 inwoners (bron: CBS). De gemeente hef n oppervlakte van 118,50 [[vierkaante kilemeter|km²]] an land en nog 2,52 km² an water. In de därpen Olst, Wieje en in de boerschop Marle staon mölles die goed onderhoolden bint. Tussen Olst en Wieje ligt ok nog, an weerskanten van de [[N337]], t därpien [[Den Nul]]. 
+De boerschoppen Marle en Welsum bint [[exklave]]s, die an de westkante van de Iessel liggen. Olst-Wieje had op 1 jannewaori 2019 18.023 inwoners (bron: CBS). De gemeente hef n oppervlakte van 118,50 [[vierkaante kilemeter|km²]] an land en nog 2,52 km² an water. In de därpen Olst, Wieje en in de boerschop Marle staon mölles die goed onderhoolden bint. Tussen Olst en Wieje ligt ok nog, an weerskanten van de [[N337]], t därpien [[Den Nul]]. 
 
 De gemeente Olst-Wieje is bekend vanwege t natuurgebied [[De Duurse Weerden]] dät zich, heel uniek, an beide kanten van de rivier de [[Iessel]] uutstrekt. Daornaost bint der nog völle kleine andere natuurgebieden in de [[uterweerd]]en in-ericht, veural rond de [[ruïne]]s van de veurmalige [[steenfabriek]]en. t "Baken" van de provinsie Aoveriessel steet in Olst, an de rand van de Iessel.
 
