*Empty MediaWiki Message*

--- a/Olst-Wieje.mw
+++ b/Olst-Wieje.mw
@@ -8,9 +8,9 @@
 |oppervlak = 118,37
 |oppervlak laand = 114,08
 |oppervlak waoter = 4,29
-|inwoeners = 17.792
-|daotum inwoeners = 1 mei 2014
-|dichtheid = 153
+|inwoeners = 18.023
+|daotum inwoeners = 1 jannewaori 2019
+|dichtheid = 152
 |breedtegraod = 52/20/0/N
 |lengtegraod = 6/6/0/E
 |verkeersaoder = [[N337]], [[N348]], [[N756]]; spoorliende [[Arnem]]-[[Zwolle]]
